@@ -25,12 +25,12 @@
 
 #include <QString>
 
-#define WEBHOST_DEFAULT_CONTROL_PORT 6352
-#define WEBHOST_DEFAULT_NTP_CONF_FILE "/etc/ntp.conf"
-#define WEBHOST_DEFAULT_NTP_SERVICE_NAME "ntpd"
-#define WEBHOST_DEFAULT_SERVICE_RESPAWN_DELAY 100
-#define WEBHOST_PROCESS_KILL_INTERVAL 5000
-#define WEBHOST_CONF_FILE "/etc/webhost.conf"
+#include <wh/whsettings.h>
+
+#define WEBHOSTD_DEFAULT_NTP_CONF_FILE "/etc/ntp.conf"
+#define WEBHOSTD_DEFAULT_NTP_SERVICE_NAME "ntpd"
+#define WEBHOSTD_DEFAULT_SERVICE_RESPAWN_DELAY 100
+#define WEBHOSTD_PROCESS_KILL_INTERVAL 5000
 
 class Config
 {
